--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,46 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  width: 100dvw;
+  padding: 0 200px;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
   text-align: center;
+  border-radius: 10px;
+  border: 6px solid transparent;
+  transition: 0.1s all;
+  padding: 0 10px 10px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.grid-item:hover {
+  border: 6px solid #d3d3d3;
+  cursor: pointer;
+  transform: scale(1.04);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid-item:hover > img {
+  transition: 1s all;
+  transform: scale(1.04);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.grid-item .hobby ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.grid-item .hobby ul li {
+  border: 2px solid #9e9e9e;
+  border-radius: 6px;
+  display: inline-block;
+  font-size: 12px;
+  margin: 0 7px 7px 0;
+  padding: 7px;
+  background: white;
 }
