--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,65 @@ body {
     align-items: center;
   }
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  width: 100dvw;
+  padding: 0 200px;
+  align-items: center;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  text-align: center;
+  border-radius: 10px;
+  border: 6px solid transparent;
+  transition: 0.1s all;
+  padding: 0 10px 10px;
+}
+
+.grid-item:hover {
+  border: 6px solid #d3d3d3;
+  cursor: pointer;
+  transform: scale(1.04);
+}
+
+.grid-item:hover > img {
+  transition: 1s all;
+  transform: scale(1.04);
+}
+
+.grid-item .hobby ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.grid-item .hobby ul li {
+  border: 2px solid #9e9e9e;
+  border-radius: 6px;
+  display: inline-block;
+  font-size: 12px;
+  margin: 0 7px 7px 0;
+  padding: 7px;
+  background: white;
+}
+
+.btn {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: none;
+}
