--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100dvh;
   display: flex;
   overflow: hidden;
   align-items: center;
@@ -27,6 +26,7 @@ body {
 }
 
 .grid-container {
+  height: 100dvh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   width: 1000px;
@@ -98,4 +98,110 @@ a:hover,
 a:active {
   color: inherit;
   text-decoration: none;
+}
+
+.react-demo {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+
+.a1-box {
+  background: #cca4ff;
+  padding: 20px;
+  margin: 4px;
+  color: white;
+  font-size: 1.2em;
+  display: inline-block;
+  border-radius: 15px;
+  display: flex;
+  width: 50%;
+}
+
+.a2-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #81c784;
+  padding: 20px;
+  margin: 4px;
+  font-size: 1.2em;
+  display: inline-block;
+  border-radius: 15px;
+  display: flex;
+  width: 50%;
+}
+
+.a-box {
+  background: #ffe0b2;
+  padding: 20px;
+  margin: 10px;
+  font-size: 1.2em;
+  border-radius: 15px;
+  display: flex;
+  width: 96%;
+}
+
+button {
+  cursor: pointer;
+}
+
+.card {
+  font-size: 1.2em;
+  display: inline-block;
+  border-radius: 15px;
+  display: flex;
+  min-width: 240px;
+  align-items: center;
+  flex-direction: row;
+  padding: 20px;
+  margin: 10px;
+  background-color: #ffe4e1;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.6;
+  color: #333;
+  width: 96%;
+}
+
+.card input {
+  border: navajowhite;
+  text-transform: capitalize;
+  margin: 0 8px;
+  border-radius: 4px;
+  font-size: 1em;
+}
+.card div {
+  display: inline-block;
+}
+.card div.false {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: red;
+  margin: 0 8px;
+}
+
+.card div.true {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: green;
+  margin: 0 8px;
+}
+
+.card ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.card li {
+  border-radius: 6px;
+  float: left;
+  margin: 5px;
+  padding: 8px;
+  width: 100px;
+  background: white;
+  box-shadow: -2px 1px 5px 0px #0101015c;
 }
